# mex_app

./: .env.example  .gitignore  .mcp.json  .mex.json  APP_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  LEARNING_ROADMAP.md  MCP_SERVER.md  MCP_SETUP_PLAN.md  MCP_TOKEN_GUIDE.md  README.md  ROADMAP.md  USAGE.md  USER_GUIDE.md  docker-compose.yml  package-lock.json  render.yaml  understand-plan.md
.claude/: mcp_servers.json  settings.local.json
.claude/commands/: document.md
.claude/skills/: document.md  learn.md  understand.md
.github/workflows/: ci.yml
.kiro/research/: market-research-report.md  market-research.md  marketing-strategy.md
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_pivot_to_personal.py  003_pivot_to_portfolio_schema.py  004_pgvector_and_mcp_tokens.py  005_remove_quiz_tables.py
backend/app/: __init__.py  config.py  main.py  rate_limit.py
backend/app/api/: __init__.py  auth.py  billing.py  dashboard.py  devlogs.py  draft_reviews.py  gate_reviews.py  idea_sparring.py  portfolio.py  postmortems.py  projects.py  quiz.py  retrospectives.py
backend/app/application/: __init__.py  billing_service.py  devlog_service.py  draft_review_service.py  gate_review_service.py  idea_sparring_service.py  postmortem_service.py  project_service.py  quiz_service.py  retrospective_service.py  usage_service.py  usage_tracking.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  plan_guards.py
backend/app/domain/: __init__.py
backend/app/domain/case/: __init__.py  case_manager.py
backend/app/domain/embedding/: __init__.py  embedding_service.py
backend/app/domain/llm/: __init__.py  llm_service.py
backend/app/domain/pattern/: __init__.py  pattern_analyzer.py
backend/app/domain/question/: __init__.py  question_generator.py
backend/app/domain/security/: __init__.py  secret_detector.py
backend/app/domain/similarity/: __init__.py  similarity_engine.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/database/: __init__.py  migration.py  models.py  session.py
backend/app/infrastructure/vectordb/: __init__.py  qdrant_client.py
backend/app/performance/: __init__.py  concurrent_handler.py  metrics.py  rate_limiter.py  search_benchmark.py  semantic_cache.py
backend/app/seeds/: __init__.py  decision_cases.py  failure_patterns.py  fallback.py  loader.py
backend/tests/: test_api_draft_review.py  test_api_gate_review.py  test_api_postmortem.py  test_auth.py  test_case_manager.py  test_config.py  test_database_models.py  test_draft_review_service.py  test_embedding_service.py  test_gate_review_service.py  test_integration.py  test_pattern_analyzer.py  test_performance.py  test_postmortem_service.py  test_project_structure.py  test_qdrant.py  test_question_generator.py  test_secret_detector.py  test_seed_data.py  test_similarity_engine.py
docs/: business-model-analysis.md  evaluation-metrics.md  mex-flashcards.json  x-posting-plan.md  zenn-article-01.md  zenn-mcp-setup-guide.md
docs/review_in_mcp_server/: ai-review-prompt.md
frontend/: .env.example  README.md  package-lock.json  package.json  vercel.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  (+5 more)
mcp-server/: .mcp.json  README.md  package-lock.json  package.json  tsconfig.json
(+110 files in other folders)
